--- a/source/css/scss/objects/_blocks.scss
+++ b/source/css/scss/objects/_blocks.scss
@@ -347,6 +347,18 @@
 		display: inline-block;
 		vertical-align: middle;
 		margin-top: -5px;
+		max-width: 78%;
+
+		@include media-breakpoint-up(md) {
+			max-width: 81%;
+		}
+
+		@include media-breakpoint-up(lg) {
+			max-width: 81%;
+		}
+		@include media-breakpoint-up(xl) {
+			max-width: 85%;
+		}
 	}
 	.a-panelIconLeft-introText {
 		display: block;
@@ -354,6 +366,7 @@
 	}
 	a {
 		@extend .a-textSize3;
+		line-height: 36px;
 	}
 	.a-panelIconLeft-code {
 		@extend .a-textSize3;
